Hides customfields box.

--- a/css/admin/main.css
+++ b/css/admin/main.css
@@ -3,5 +3,6 @@
 }
 
 #slugdiv { display: none; }
+#postcustom {display: none;}
 #normal-sortables { min-height: 0px !important; }
 #region-adder { display: none; }
