--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1,3 +1,7 @@
+.widget_magento_products {
+	background-color: #F9F9F9 !important;
+}
+
 .widget_magento_products ul {
 	list-style: none;
 	text-align: center;
